<resources>
    <string name="app_name">QuizApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quiz_game">Quiz Game</string>
    <string name="name">Name:</string>
    <string name="welcome">Welcome</string>
    <string name="start">start</string>
    <string name="next">NEXT</string>
    <string name="clear_all">clear all</string>
    <string name="date">Date:</string>
    <string name="score">Score:</string>
    <string name="results">Results</string>
</resources>