<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.StartFragment"
    android:background="@drawable/gradient_bg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quiz_game"
        android:layout_gravity="center|top"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:textSize="38sp"
        tools:layout_editor_absoluteY="133dp"/>

    <LinearLayout
        android:layout_width="314dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="@color/white"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/welcome"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="301dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="3dp"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:autofillHints="" />

        <Spinner
            android:id="@+id/spCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>

        <Spinner
            android:id="@+id/spDifficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/btnStart"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:width="290dp"
            android:layout_marginTop="10dp"
            android:background="@color/blue"
            android:text="@string/start"
            android:textColor="@color/white" />

    </LinearLayout>

</FrameLayout>